# da_02

./: CMakeLists.txt  TOptional.h  TPatricia.cpp  TPatricia.h  TVector.h  copy_test.cpp  main.cpp  profile.h  test.cpp  test_generator.cpp  text_test_generator.cpp
report/: report.aux  report.out  report.tex
report/src/: banchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
